--- a/icast/frontend/src/index.html
+++ b/icast/frontend/src/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -10,9 +9,8 @@
   content="width=device-width, initial-scale=1, shrink-to-fit=no"
 />
 <meta name="theme-color" content="#000000" />
-  <link rel="icon" href='{% static "icast.ico" %}'>
-  <!-- <link rel="stylesheet" href='{% static "css/fontawesome-all.css" %}'>
-  <link rel="stylesheet" href='{% static "css/fontawesome-v4-shims.css" %}'> -->
+  <link rel="icon" href='/static/icast.ico'>
+  <link rel="stylesheet" href="/static/css/main.css">
   <title>iCast - Cloud Signage Sysetm</title>
   <!-- <style type="text/css">
     .construction-theme{
@@ -25,14 +23,14 @@
     background-repeat: no-repeat;
     }
     </style> -->
-</head>
+<link href="./css/main.css" rel="stylesheet"></head>
 
 
 <body>
   <div id="app" >
     <!-- React -->
   </div>
-</body>
+<script src="main.js"></script></body>
 
-<script src='{% static "main.js" %}'></script>
+<script src='/static/main.js'></script>
 </html>
